--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,21 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Imports: Matrix,
+    data.table,
+    dynamicTreeCut,
+    stats,
+    BiocParallel,
+    dplyr,
+    ggplot2,
+    Biobase,
+    RColorBrewer,
+    Rtsne,
+    dendextend,
+    ggbeeswarm,
+    plyr,
+    reshape2,
+    methods
+Suggests: DESeq,
+    scater,
+    scran
