--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Imports: Matrix,
+Imports: methods,
+    Matrix,
     data.table,
     dynamicTreeCut,
     stats,
@@ -23,7 +24,8 @@ Imports: Matrix,
     ggbeeswarm,
     plyr,
     reshape2,
-    methods
-Suggests: DESeq,
+Suggests:
+    limSolve
     scater,
-    scran
+    scran,
+    DESeq
