--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,19 +12,22 @@ RoxygenNote: 6.0.1
 Imports: methods,
     Matrix,
     data.table,
-    dynamicTreeCut,
-    stats,
+    Biobase,
     BiocParallel,
     dplyr,
-    ggplot2,
-    Biobase,
-    RColorBrewer,
-    Rtsne,
-    dendextend,
-    ggbeeswarm,
     plyr,
     reshape2,
-Suggests: limSolve,
+    ggplot2,
+    Rtsne,
+    ggbeeswarm,
+    stats,
+    dynamicTreeCut,
+    dendextend,
+    RColorBrewer,
+    limSolve,
     scater,
     scran,
     DESeq
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
