--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,16 +9,7 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Imports: methods,
-    Matrix,
-    data.table,
-    Biobase,
-    BiocParallel,
-    dplyr,
-    plyr,
-    reshape2,
-    ggplot2,
-    Rtsne,
+Imports: Rtsne,
     ggbeeswarm,
     stats,
     dynamicTreeCut,
@@ -31,3 +22,25 @@ Imports: methods,
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
+Depends: BiocParallel,
+    methods,
+    ggplot2,
+    data.table,
+    Matrix,
+    dplyr,
+    plyr,
+    reshape2,
+    Biobase
+Collate: 
+    'ASCEND_cellranger.R'
+    'ASCEND_clustering.R'
+    'ASCEND_confoundingfactors.R'
+    'ASCEND_diffexpression.R'
+    'ASCEND_dimreduction.R'
+    'ASCEND_filtering.R'
+    'ASCEND_objects.R'
+    'ASCEND_methods.R'
+    'ASCEND_normalisation.R'
+    'ASCEND_plots.R'
+    'ASCEND_scran.R'
+    'ASCEND_utilities.R'
