Huge update - changed BatchInformation to CellInformation, subsequently changing how functions are called and matched to cellular information.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,8 +39,10 @@ Collate:
     'ASCEND_dimreduction.R'
     'ASCEND_filtering.R'
     'ASCEND_objects.R'
+    'ASCEND_getfunctions.R'
     'ASCEND_methods.R'
     'ASCEND_normalisation.R'
     'ASCEND_plots.R'
     'ASCEND_scran.R'
+    'ASCEND_subsetmethods.R'
     'ASCEND_utilities.R'
