--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,15 @@
 export(CellRangerToASCEND)
 export(CheckAEMSet)
 export(ConvertGeneAnnotation)
-export(GetBatchInfo)
-export(GetClusters)
+export(GetCellInfo)
 export(GetControls)
 export(GetExpressionMatrix)
-export(GetGeneAnnotation)
+export(GetGeneInfo)
 export(NewAEMSet)
+export(ReplaceCellInfo)
 export(ReplaceExpressionMatrix)
+export(ReplaceGeneInfo)
 export(SubsetBatch)
 export(SubsetCluster)
-export(UpdateBatchInfo)
 export(UpdateControls)
 exportClasses(AEMSet)
