--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,48 @@
 
 export(CellRangerToASCEND)
 export(CheckAEMSet)
+export(ChunkMatrix)
 export(ConvertGeneAnnotation)
+export(ConvertMatrix)
+export(DisplayLog)
+export(ExcludeControl)
+export(FindOptimalClusters)
+export(GenerateMetrics)
+export(GetBatchMatrix)
 export(GetCellInfo)
 export(GetControls)
 export(GetExpressionMatrix)
 export(GetGeneInfo)
+export(MergeExprsMtx)
 export(NewAEMSet)
+export(NormaliseBatches)
+export(NormaliseByRLE)
+export(NormaliseLibSize)
+export(PlotControlPercentagesPerSample)
+export(PlotDEVolcano)
+export(PlotDendrogram)
+export(PlotGeneralQC)
+export(PlotLibrarySizesPerSample)
+export(PlotNormalisationQC)
+export(PlotPCA)
+export(PlotPCAVariance)
+export(PlotPDF)
+export(PlotStability)
+export(PlotStabilityDendro)
+export(PlotTSNE)
+export(PlotTopGeneExpression)
+export(PlotTopGenesPerSample)
+export(ReduceDimensions)
+export(RemoveConfoundingFactors)
 export(ReplaceCellInfo)
 export(ReplaceExpressionMatrix)
 export(ReplaceGeneInfo)
+export(RunDiffExpression)
+export(RunPCA)
+export(RunTSNE)
 export(SubsetBatch)
+export(SubsetCells)
 export(SubsetCluster)
 export(UpdateControls)
+export(scranNormalise)
 exportClasses(AEMSet)
