Updated documentation. Added SubsetCondition function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(RunTSNE)
 export(SubsetBatch)
 export(SubsetCells)
 export(SubsetCluster)
+export(SubsetCondition)
 export(UpdateControls)
 export(scranNormalise)
 exportClasses(AEMSet)
