Pushed colour option in.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(GetCellInfo)
 export(GetControls)
 export(GetExpressionMatrix)
 export(GetGeneInfo)
+export(GetRandMatrix)
 export(MergeExprsMtx)
 export(NewAEMSet)
 export(NormaliseBatches)
