--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,16 @@ export(CheckAEMSet)
 export(ChunkMatrix)
 export(ConvertGeneAnnotation)
 export(ConvertMatrix)
+export(ConvertScaterToASCEND)
+export(ConvertToScater)
 export(DisplayLog)
 export(ExcludeControl)
+export(FilterByControl)
+export(FilterByCustomControl)
+export(FilterByExpressedGenesPerCell)
+export(FilterByOutliers)
 export(FindOptimalClusters)
+export(FindOutliers)
 export(GenerateMetrics)
 export(GetBatchMatrix)
 export(GetCellInfo)
@@ -35,6 +42,7 @@ export(PlotTSNE)
 export(PlotTopGeneExpression)
 export(PlotTopGenesPerSample)
 export(ReduceDimensions)
+export(RegressGene)
 export(RemoveConfoundingFactors)
 export(ReplaceCellInfo)
 export(ReplaceExpressionMatrix)
