Updated documentation. Added cell cycle function. Fixed bugs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,11 @@ export(GenerateMetrics)
 export(GetBatchMatrix)
 export(GetCellInfo)
 export(GetControls)
+export(GetDistanceMatrix)
 export(GetExpressionMatrix)
 export(GetGeneInfo)
+export(GetHclust)
+export(GetPCA)
 export(GetRandMatrix)
 export(MergeExprsMtx)
 export(NewAEMSet)
@@ -55,5 +58,6 @@ export(SubsetCells)
 export(SubsetCluster)
 export(SubsetCondition)
 export(UpdateControls)
+export(scranCellCycle)
 export(scranNormalise)
 exportClasses(AEMSet)
