Replaced FindOptimalClusters with RunCORE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ export(FilterByControl)
 export(FilterByCustomControl)
 export(FilterByExpressedGenesPerCell)
 export(FilterByOutliers)
-export(FindOptimalClusters)
 export(FindOutliers)
 export(GenerateMetrics)
 export(GetBatchMatrix)
@@ -50,6 +49,7 @@ export(RegressGene)
 export(ReplaceCellInfo)
 export(ReplaceExpressionMatrix)
 export(ReplaceGeneInfo)
+export(RunCORE)
 export(RunDiffExpression)
 export(RunPCA)
 export(RunTSNE)
