--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,7 @@ Suggests: knitr,
 VignetteBuilder: knitr
 Depends: 
     methods,
-    data.table (<= 1.10.2),
+    data.table,
     Matrix
 Collate: 
     'ASCEND_cellranger.R'
