--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,9 @@ export(ConvertToScater)
 export(DisplayLog)
 export(ExcludeControl)
 export(FilterByControl)
-export(FilterByCustomControl)
 export(FilterByExpressedGenesPerCell)
 export(FilterByOutliers)
+export(FilterControl)
 export(FindOutliers)
 export(GenerateMetrics)
 export(GetBatchMatrix)
