--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
-Package: ASCEND
+Package: ascend
 Type: Package
-Title: ASCEND - Analysis of Single Cell Expression, Normalisation, and Differential expression
+Title: ascend - Analysis of Single Cell Expression, Normalisation, and Differential expression
 Version: 0.1.1
 Author: c(person("Anne", "Senabouth", email = "a.senabouth@imb.uq.edu.au", rol = "aut, cre"), person("Quan", "Nguygen", email = "quan.nguyen@imb.uq.edu.au", rol = "aut"))
 Maintainer: Anne Senabouth <a.senabouth@imb.uq.edu.au>
 Description: Provides a series of tools for cleaning, normalisation and analysis of data produced by single cell experiments.
-License: What license is it under?
+License: GPLv3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
