Updated ascend vignettes and functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,7 @@ export(GetGeneInfo)
 export(GetHclust)
 export(GetPCA)
 export(GetRandMatrix)
-export(MergeExprsMtx)
+export(JoinMatrices)
 export(NewEMSet)
 export(NormaliseBatches)
 export(NormaliseByRLE)
