--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,9 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Imports: stats,
+Imports: 
+    methods,
+    stats,
     reshape2,
     limSolve,
     ggplot2,
@@ -28,7 +30,6 @@ Suggests: knitr,
     testthat
 VignetteBuilder: knitr
 Depends:
-    methods,
     dplyr,
     data.table,
     Matrix
