Introduced functions to handle SCESets and SCE objects seperately, changed how scranNormalise runs to refelct these changes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,8 @@ VignetteBuilder: knitr
 Depends:
     dplyr,
     data.table,
-    Matrix
+    Matrix,
+    SingleCellExperiment
 Collate:
     'ascend_cellranger.R'
     'ascend_clustering.R'
