--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(CheckEMSet)
 export(ChunkMatrix)
 export(ConvertGeneAnnotation)
 export(ConvertMatrix)
-export(ConvertScaterToascend)
-export(ConvertToScater)
+export(ConvertToSCE)
+export(ConvertToSCESet)
 export(DisplayLog)
 export(ExcludeControl)
 export(FilterByControl)
@@ -53,6 +53,7 @@ export(RunCORE)
 export(RunDiffExpression)
 export(RunPCA)
 export(RunTSNE)
+export(SCESet2EMSet)
 export(SubsetBatch)
 export(SubsetCells)
 export(SubsetCluster)
