--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,13 +27,13 @@ Imports:
     DESeq
 Suggests: knitr,
     rmarkdown,
-    testthat
+    testthat,
+    SingleCellExperiment
 VignetteBuilder: knitr
 Depends:
     dplyr,
     data.table,
-    Matrix,
-    SingleCellExperiment
+    Matrix
 Collate:
     'ascend_cellranger.R'
     'ascend_clustering.R'
