--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ importFrom(Matrix,t)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(Rtsne,Rtsne)
 importFrom(data.table,as.data.table)
+importFrom(dendextend,"%>%")
 importFrom(dendextend,branches_attr_by_clusters)
 importFrom(dendextend,colored_bars)
 importFrom(dendextend,get_leaves_branches_attr)
@@ -114,6 +115,7 @@ importFrom(dendextend,set)
 importFrom(dendextend,sort_levels_values)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
+importFrom(dplyr,id)
 importFrom(dplyr,select)
 importFrom(dynamicTreeCut,cutreeDynamic)
 importFrom(ggbeeswarm,geom_quasirandom)
