--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(ChunkMatrix)
 export(ConvertGeneAnnotation)
 export(ConvertMatrix)
 export(ConvertToSCE)
-export(ConvertToSCESet)
 export(DisplayLog)
 export(ExcludeControl)
 export(FilterByControl)
@@ -78,6 +77,7 @@ exportMethods(UpdateControls)
 import(DESeq)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(BiocGenerics,counts)
+importFrom(BiocGenerics,sizeFactors)
 importFrom(BiocParallel,bplapply)
 importFrom(BiocParallel,bpparam)
 importFrom(Matrix,Matrix)
@@ -153,7 +153,6 @@ importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
 importFrom(reshape2,melt)
 importFrom(scater,calculateQCMetrics)
-importFrom(scater,newSCESet)
 importFrom(scater,normalize)
 importFrom(scran,computeSumFactors)
 importFrom(scran,cyclone)
