--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,6 +65,7 @@ Collate:
     'ascend_scran.R'
     'ascend_subsetters.R'
     'ascend_utilities.R'
+    'testthat.R'
 biocViews: Software, 
     WorkflowStep, 
     Preprocessing, 
