--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,13 +135,12 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,id)
 importFrom(dplyr,intersect)
 importFrom(dplyr,left_join)
+importFrom(dplyr,semi_join)
 importFrom(dynamicTreeCut,cutreeDynamic)
 importFrom(fields,interp.surface)
 importFrom(ggbeeswarm,geom_quasirandom)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_blank)
-importFrom(ggplot2,element_line)
-importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_histogram)
