Updated documentation and fixed runTSNE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(plotTopGenesPerSample)
 export(plotVolcano)
 export(progressLog)
 export(regressConfoundingFactors)
+export(retrieveCluster)
 export(rowInfo)
 export(runCORE)
 export(runDESeq)
