Changed name conversion and added in convertGeneID function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(calculateQC)
 export(chooseNew)
 export(clusterAnalysis)
 export(colInfo)
+export(convertGeneID)
 export(differentialLRT)
 export(excludeControl)
 export(filterByControl)
@@ -82,6 +83,7 @@ exportMethods(addControlInfo)
 exportMethods(calculateQC)
 exportMethods(clusterAnalysis)
 exportMethods(colInfo)
+exportMethods(convertGeneID)
 exportMethods(excludeControl)
 exportMethods(progressLog)
 exportMethods(rowInfo)
