Major update to 0.7

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: ascend
 Type: Package
 Title: ascend - Analysis of Single Cell Expression, Normalisation, and Differential expression
-Version: 0.6.5
+Version: 0.7.0
 Author: c(person("Anne", "Senabouth", email = "a.senabouth@uq.edu.au", rol = "aut, cre"), person("Quan", "Nguygen", email = "quan.nguyen@imb.uq.edu.au", rol = "aut"))
 Maintainer: Anne Senabouth <a.senabouth@uq.edu.au>
 Description: Provides a series of tools for cleaning, normalisation and analysis of data produced by single cell experiments.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
 Imports: stats,
     reshape2,
     fields,
@@ -31,13 +31,13 @@ Imports: stats,
     MASS,
     GenomeInfoDb,
     GenomeInfoDbData
-Suggests: devtools,
+Suggests: scater,
+    scran,
+    devtools,
     knitr,
     rmarkdown,
     testthat,
     KernSmooth,
-    scater,
-    scran,
     DESeq,
     DESeq2
 VignetteBuilder: knitr
