--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(calcRandIndex)
 export(calcRandIndexMatrix)
 export(calcStability)
 export(calcVariance)
+export(calculateCV)
 export(calculateControlMetrics)
 export(calculateQC)
 export(chooseNew)
@@ -53,6 +54,7 @@ export(plotStabilityDendro)
 export(plotTSNE)
 export(plotTopGenesBoxplot)
 export(plotTopGenesPerSample)
+export(plotVariableGenes)
 export(plotVolcano)
 export(progressLog)
 export(regressConfoundingFactors)
@@ -68,6 +70,7 @@ export(runTSNE)
 export(scranCellCycle)
 export(scranNormalise)
 export(subsetCondition)
+export(useVariableGenes)
 export(validateEMSet)
 export(worker_LRT)
 exportClasses(EMSet)
@@ -80,6 +83,7 @@ exportMethods("rowInfo<-")
 exportMethods(EMSet2SCE)
 exportMethods(SCE2EMSet)
 exportMethods(addControlInfo)
+exportMethods(calculateCV)
 exportMethods(calculateQC)
 exportMethods(clusterAnalysis)
 exportMethods(colInfo)
@@ -92,6 +96,7 @@ exportMethods(runPCA)
 exportMethods(runTSNE)
 exportMethods(show)
 exportMethods(subsetCondition)
+exportMethods(useVariableGenes)
 import(BiocGenerics)
 import(S4Vectors)
 import(SingleCellExperiment)
