--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(chooseNew)
 export(clusterAnalysis)
 export(colInfo)
 export(convertGeneID)
+export(data_package)
 export(differentialLRT)
 export(excludeControl)
 export(filterByControl)
@@ -30,9 +31,11 @@ export(filterLowAbundanceGenes)
 export(findOptimalResult)
 export(func_DESeq)
 export(getConsecSeq)
+export(joinPaths)
 export(loadCellRanger)
 export(minMax)
 export(newEMSet)
+export(normWithinBatch)
 export(normaliseBatches)
 export(normaliseByRLE)
 export(plotAverageGeneCount)
@@ -60,16 +63,17 @@ export(progressLog)
 export(regressConfoundingFactors)
 export(retrieveCluster)
 export(rowInfo)
-export(runCORE)
 export(runDESeq)
 export(runDESeq2)
 export(runDiffExpression)
 export(runGeneLRT)
 export(runPCA)
+export(runSCORE)
 export(runTSNE)
 export(scranCellCycle)
 export(scranNormalise)
 export(subsetCondition)
+export(unLog2Matrix)
 export(useVariableGenes)
 export(validateEMSet)
 export(worker_LRT)
@@ -91,11 +95,12 @@ exportMethods(convertGeneID)
 exportMethods(excludeControl)
 exportMethods(progressLog)
 exportMethods(rowInfo)
-exportMethods(runCORE)
 exportMethods(runPCA)
+exportMethods(runSCORE)
 exportMethods(runTSNE)
 exportMethods(show)
 exportMethods(subsetCondition)
+exportMethods(updateObject)
 exportMethods(useVariableGenes)
 import(BiocGenerics)
 import(S4Vectors)
