--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ascend
 Type: Package
 Title: ascend - Analysis of Single Cell Expression, Normalisation, and Differential expression
-Version: 0.7.3
+Version: 0.7.4
 Author: c(person("Anne", "Senabouth", email = "a.senabouth@garvan.org.au", rol = "aut, cre"), person("Quan", "Nguygen", email = "quan.nguyen@imb.uq.edu.au", rol = "aut"))
 Maintainer: Anne Senabouth <a.senabouth@uq.edu.au>
 Description: Provides a series of tools for cleaning, normalisation and analysis of data produced by single cell experiments.
@@ -41,7 +41,7 @@ Suggests: scater,
     DESeq,
     DESeq2
 VignetteBuilder: knitr
-Depends: R (>= 3.4.3),
+Depends:
     methods,
     dplyr,
     BiocGenerics,
