--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(bimodLikData)
 export(bimodLikData_FixNoVar)
 export(buildKeyStat)
 export(calcControlQC)
+export(calcGeoMeans)
+export(calcNormFactor)
 export(calcRandIndex)
 export(calcRandIndexMatrix)
 export(calcStability)
@@ -63,12 +65,12 @@ export(progressLog)
 export(regressConfoundingFactors)
 export(retrieveCluster)
 export(rowInfo)
+export(runCORE)
 export(runDESeq)
 export(runDESeq2)
 export(runDiffExpression)
 export(runGeneLRT)
 export(runPCA)
-export(runSCORE)
 export(runTSNE)
 export(scranCellCycle)
 export(scranNormalise)
@@ -95,8 +97,8 @@ exportMethods(convertGeneID)
 exportMethods(excludeControl)
 exportMethods(progressLog)
 exportMethods(rowInfo)
+exportMethods(runCORE)
 exportMethods(runPCA)
-exportMethods(runSCORE)
 exportMethods(runTSNE)
 exportMethods(show)
 exportMethods(subsetCondition)
