--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: ascend - Analysis of Single Cell Expression, Normalisation, and Differential expression
 Version: 0.7.6
 Author: c(person("Anne", "Senabouth", email = "a.senabouth@garvan.org.au", rol = "aut, cre"), person("Quan", "Nguygen", email = "quan.nguyen@imb.uq.edu.au", rol = "aut"))
-Maintainer: Anne Senabouth <a.senabouth@uq.edu.au>
+Maintainer: Anne Senabouth <a.senabouth@garvan.org.au>
 Description: Provides a series of tools for cleaning, normalisation and analysis of data produced by single cell experiments.
 License: GPL-3
 Encoding: UTF-8
@@ -41,7 +41,7 @@ Suggests: scater,
     DESeq,
     DESeq2
 VignetteBuilder: knitr
-Depends:
+Depends: R (>= 3.5.0),
     methods,
     dplyr,
     BiocGenerics,
