--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,19 +35,21 @@ export(func_DESeq)
 export(getConsecSeq)
 export(joinPaths)
 export(loadCellRanger)
+export(mergeDF)
 export(minMax)
 export(newEMSet)
 export(normWithinBatch)
 export(normaliseBatches)
 export(normaliseByRLE)
 export(plotAverageGeneCount)
+export(plotBatchNormQC)
 export(plotControlHist)
 export(plotControlPctPerSample)
 export(plotDendrogram)
 export(plotFeatureHist)
 export(plotGeneNumber)
 export(plotGeneralQC)
-export(plotLibsizeBarplot)
+export(plotLibsizeBoxplot)
 export(plotLibsizeHist)
 export(plotLibsizePerSample)
 export(plotMDS)
