--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,31 @@
-.Rproj.user
-.Rhistory
-.Ruserdata
-inst/doc
-SingleCellExperiment.R
-
+.renviron
+.rprofile
+.rproj
+.rproj.user
+.rhistory
+.rapp.history
+.o
+.sl
+.so
+.dylib
+.a
+.dll
+.def
+.ds_store
+unsrturl.bst
+.log
+.aux
+.backups
+.cproject
+.directory
+.dropbox
+.exrc
+.gdb.history
+.gitattributes
+.gitmodules
+.hgtags
+.project
+.seed
+.settings
+.tm_properties
 \.\.Rcheck/
