--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,8 +106,6 @@ exportMethods(show)
 exportMethods(subsetCondition)
 exportMethods(updateObject)
 exportMethods(useVariableGenes)
-import(BiocGenerics)
-import(S4Vectors)
 import(SingleCellExperiment)
 import(SummarizedExperiment)
 import(ggplot2)
@@ -196,6 +194,7 @@ importFrom(reshape2,melt)
 importFrom(stats,as.dendrogram)
 importFrom(stats,as.formula)
 importFrom(stats,cmdscale)
+importFrom(stats,density)
 importFrom(stats,dist)
 importFrom(stats,formula)
 importFrom(stats,hclust)
@@ -205,5 +204,6 @@ importFrom(stats,order.dendrogram)
 importFrom(stats,p.adjust)
 importFrom(stats,prcomp)
 importFrom(stats,reorder)
+importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(tidyr,gather)
