--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,6 @@ export(loadCellRanger)
 export(mergeDF)
 export(minMax)
 export(newEMSet)
-export(normWithinBatch)
 export(normaliseBatches)
 export(normaliseByRLE)
 export(plotAverageGeneCount)
@@ -109,6 +108,7 @@ exportMethods(useVariableGenes)
 import(SingleCellExperiment)
 import(SummarizedExperiment)
 import(ggplot2)
+import(locfit)
 import(methods)
 importFrom(BiocGenerics,colnames)
 importFrom(BiocGenerics,rownames)
@@ -206,4 +206,5 @@ importFrom(stats,prcomp)
 importFrom(stats,reorder)
 importFrom(stats,sd)
 importFrom(stats,setNames)
+importFrom(stats,var)
 importFrom(tidyr,gather)
