--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,36 +1,37 @@
 Package: ascend
 Type: Package
 Title: ascend - Analysis of Single Cell Expression, Normalisation, and Differential expression
-Version: 0.9.4
+Version: 0.9.8
 Author: c(person("Anne", "Senabouth", email = "a.senabouth@garvan.org.au", rol = "aut, cre"), person("Quan", "Nguygen", email = "quan.nguyen@imb.uq.edu.au", rol = "aut"))
 Maintainer: Anne Senabouth <a.senabouth@garvan.org.au>
 Description: Provides a series of tools for cleaning, normalisation and analysis of data produced by single cell experiments.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.0
-Imports: stats,
-    reshape2,
+RoxygenNote: 6.1.1
+Imports: utils,
+    stats,
     fields,
-    ggplot2,
-    ggbeeswarm,
-    Biobase,
     BiocParallel,
     Rtsne,
     grDevices, 
     graphics, 
-    utils,
+    ggplot2,
+    ggbeeswarm,
+    RColorBrewer,
     gridExtra,
     dynamicTreeCut,
     dendextend,
-    RColorBrewer,
-    locfit,
-    Matrix,
     data.table,
+    reshape2,
+    dplyr,
     tidyr,
     MASS,
     GenomeInfoDb,
-    GenomeInfoDbData
+    GenomeInfoDbData,
+    fastcluster,
+    BiocGenerics,
+    locfit
 Suggests: scater,
     scran,
     devtools,
@@ -43,12 +44,12 @@ Suggests: scater,
 VignetteBuilder: knitr
 Depends: R (>= 3.5.0),
     methods,
-    dplyr,
-    BiocGenerics,
+    Matrix,
     S4Vectors,
     SummarizedExperiment,
     SingleCellExperiment
 Collate: 
+    'ascend.R'
     'ascend_DESeq.R'
     'ascend_DESeq2.R'
     'ascend_objects.R'
