--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("clusterAnalysis<-")
 export("colInfo<-")
+export("controls<-")
 export("progressLog<-")
 export("rowInfo<-")
 export(EMSet2SCE)
@@ -23,6 +24,7 @@ export(calculateQC)
 export(chooseNew)
 export(clusterAnalysis)
 export(colInfo)
+export(controls)
 export(convertGeneID)
 export(data_package)
 export(differentialLRT)
@@ -85,6 +87,7 @@ exportMethods("[")
 exportMethods("[<-")
 exportMethods("clusterAnalysis<-")
 exportMethods("colInfo<-")
+exportMethods("controls<-")
 exportMethods("progressLog<-")
 exportMethods("rowInfo<-")
 exportMethods(EMSet2SCE)
@@ -94,6 +97,7 @@ exportMethods(calculateCV)
 exportMethods(calculateQC)
 exportMethods(clusterAnalysis)
 exportMethods(colInfo)
+exportMethods(controls)
 exportMethods(convertGeneID)
 exportMethods(excludeControl)
 exportMethods(progressLog)
@@ -151,6 +155,7 @@ importFrom(dplyr,intersect)
 importFrom(dplyr,left_join)
 importFrom(dplyr,semi_join)
 importFrom(dynamicTreeCut,cutreeDynamic)
+importFrom(fastcluster,hclust)
 importFrom(fields,interp.surface)
 importFrom(ggbeeswarm,geom_quasirandom)
 importFrom(ggplot2,aes)
@@ -197,7 +202,6 @@ importFrom(stats,cmdscale)
 importFrom(stats,density)
 importFrom(stats,dist)
 importFrom(stats,formula)
-importFrom(stats,hclust)
 importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,order.dendrogram)
