--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,41 +5,25 @@ export("colInfo<-")
 export("controls<-")
 export("progressLog<-")
 export("rowInfo<-")
-export(EMSet2SCE)
-export(SCE2EMSet)
-export(addControlInfo)
-export(bimodLikData)
-export(bimodLikData_FixNoVar)
-export(buildKeyStat)
+export(EMSet)
+export(addGeneLabel)
 export(calcControlQC)
-export(calcGeoMeans)
-export(calcNormFactor)
-export(calcRandIndex)
-export(calcRandIndexMatrix)
-export(calcStability)
 export(calcVariance)
 export(calculateCV)
 export(calculateControlMetrics)
 export(calculateQC)
-export(chooseNew)
 export(clusterAnalysis)
 export(colInfo)
 export(controls)
+export(convert)
 export(convertGeneID)
 export(data_package)
-export(differentialLRT)
 export(excludeControl)
 export(filterByControl)
 export(filterByOutliers)
 export(filterLowAbundanceGenes)
-export(findOptimalResult)
 export(func_DESeq)
-export(getConsecSeq)
-export(joinPaths)
 export(loadCellRanger)
-export(mergeDF)
-export(minMax)
-export(newEMSet)
 export(normaliseBatches)
 export(normaliseByRLE)
 export(plotAverageGeneCount)
@@ -66,22 +50,18 @@ export(plotVariableGenes)
 export(plotVolcano)
 export(progressLog)
 export(regressConfoundingFactors)
-export(retrieveCluster)
 export(rowInfo)
 export(runCORE)
 export(runDESeq)
 export(runDESeq2)
 export(runDiffExpression)
-export(runGeneLRT)
 export(runPCA)
 export(runTSNE)
 export(scranCellCycle)
 export(scranNormalise)
 export(subsetCondition)
-export(unLog2Matrix)
 export(useVariableGenes)
 export(validateEMSet)
-export(worker_LRT)
 exportClasses(EMSet)
 exportMethods("[")
 exportMethods("[<-")
@@ -90,9 +70,7 @@ exportMethods("colInfo<-")
 exportMethods("controls<-")
 exportMethods("progressLog<-")
 exportMethods("rowInfo<-")
-exportMethods(EMSet2SCE)
-exportMethods(SCE2EMSet)
-exportMethods(addControlInfo)
+exportMethods(addGeneLabel)
 exportMethods(calculateCV)
 exportMethods(calculateQC)
 exportMethods(clusterAnalysis)
@@ -112,8 +90,10 @@ exportMethods(useVariableGenes)
 import(SingleCellExperiment)
 import(SummarizedExperiment)
 import(ggplot2)
-import(locfit)
 import(methods)
+importClassesFrom(S4Vectors,DataFrame)
+importClassesFrom(SingleCellExperiment,SingleCellExperiment)
+importClassesFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(BiocGenerics,colnames)
 importFrom(BiocGenerics,rownames)
 importFrom(BiocParallel,bplapply)
@@ -206,7 +186,6 @@ importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,order.dendrogram)
 importFrom(stats,p.adjust)
-importFrom(stats,prcomp)
 importFrom(stats,reorder)
 importFrom(stats,sd)
 importFrom(stats,setNames)
