--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(plotStabilityDendro)
 export(plotTSNE)
 export(plotTopGenesBoxplot)
 export(plotTopGenesPerSample)
+export(plotUMAP)
 export(plotVariableGenes)
 export(plotVolcano)
 export(progressLog)
@@ -57,6 +58,7 @@ export(runDESeq2)
 export(runDiffExpression)
 export(runPCA)
 export(runTSNE)
+export(runUMAP)
 export(scranCellCycle)
 export(scranNormalise)
 export(subsetCondition)
@@ -83,6 +85,7 @@ exportMethods(rowInfo)
 exportMethods(runCORE)
 exportMethods(runPCA)
 exportMethods(runTSNE)
+exportMethods(runUMAP)
 exportMethods(show)
 exportMethods(subsetCondition)
 exportMethods(updateObject)
@@ -104,7 +107,6 @@ importFrom(MASS,kde2d)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,t)
 importFrom(RColorBrewer,brewer.pal)
-importFrom(Rtsne,Rtsne)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,merge)
 importFrom(S4Vectors,metadata)
@@ -135,7 +137,6 @@ importFrom(dplyr,intersect)
 importFrom(dplyr,left_join)
 importFrom(dplyr,semi_join)
 importFrom(dynamicTreeCut,cutreeDynamic)
-importFrom(fastcluster,hclust)
 importFrom(fields,interp.surface)
 importFrom(ggbeeswarm,geom_quasirandom)
 importFrom(ggplot2,aes)
