--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,18 +28,19 @@ Imports: utils,
     MASS,
     GenomeInfoDb,
     GenomeInfoDbData,
-    BiocGenerics
-Suggests: umap,
+    BiocGenerics,
+    umap,
+    Rtsne,
+    irlba,
+    fastcluster
+Suggests: 
     scater,
     scran,
     Seurat,
     scone,
     devtools,
-    Rtsne,
-    irlba,
     knitr,
     locfit,    
-    fastcluster,
     rmarkdown,
     testthat,
     KernSmooth,
