--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ importFrom(dplyr,intersect)
 importFrom(dplyr,left_join)
 importFrom(dplyr,semi_join)
 importFrom(dynamicTreeCut,cutreeDynamic)
+importFrom(fastcluster,hclust)
 importFrom(fields,interp.surface)
 importFrom(ggbeeswarm,geom_quasirandom)
 importFrom(ggplot2,aes)
@@ -133,6 +134,7 @@ importFrom(ggplot2,ylab)
 importFrom(graphics,legend)
 importFrom(graphics,smoothScatter)
 importFrom(gridExtra,grid.arrange)
+importFrom(irlba,prcomp_irlba)
 importFrom(methods,is)
 importFrom(reshape2,melt)
 importFrom(stats,as.dendrogram)
@@ -147,3 +149,4 @@ importFrom(stats,p.adjust)
 importFrom(stats,reorder)
 importFrom(stats,setNames)
 importFrom(tidyr,gather)
+importFrom(umap,umap)
