--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("clusterAnalysis<-")
 export("colInfo<-")
 export("controls<-")
 export("progressLog<-")
+export("regcounts<-")
 export("rowInfo<-")
 export(EMSet)
 export(addGeneLabel)
@@ -46,6 +47,7 @@ export(plotUMAP)
 export(plotVariableGenes)
 export(plotVolcano)
 export(progressLog)
+export(regcounts)
 export(regressConfoundingFactors)
 export(rowInfo)
 export(runCORE)
@@ -77,6 +79,7 @@ importFrom(BiocParallel,bpvec)
 importFrom(MASS,kde2d)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,t)
+importFrom(Rtsne,Rtsne)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,merge)
 importFrom(S4Vectors,metadata)
@@ -138,11 +141,8 @@ importFrom(irlba,prcomp_irlba)
 importFrom(methods,is)
 importFrom(reshape2,melt)
 importFrom(stats,as.dendrogram)
-importFrom(stats,as.formula)
 importFrom(stats,cmdscale)
 importFrom(stats,dist)
-importFrom(stats,formula)
-importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,order.dendrogram)
 importFrom(stats,p.adjust)
