--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,8 +26,7 @@ Imports: utils,
     dplyr,
     tidyr,
     MASS,
-    GenomeInfoDb,
-    GenomeInfoDbData,
+    BiocParallel,
     BiocGenerics,
     umap,
     Rtsne,
@@ -57,6 +56,7 @@ Collate:
     'ascend.R'
     'ascend_DESeq.R'
     'ascend_DESeq2.R'
+    'ascend_confoundingfactors.R'
     'ascend_objects.R'
     'ascend_setters.R'
     'ascend_getters.R'
@@ -64,7 +64,6 @@ Collate:
     'ascend_cellranger.R'
     'ascend_dimreduction.R'
     'ascend_clustering.R'
-    'ascend_confoundingfactors.R'
     'ascend_diffexpression.R'
     'ascend_filtering.R'
     'ascend_imports.R'
