--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,11 @@ export("regcounts<-")
 export("rowInfo<-")
 export(EMSet)
 export(addGeneLabel)
+export(applyRLE)
+export(calcGeoMeansDense)
+export(calcGeoMeansSparse)
+export(calcNormFactorDense)
+export(calcNormFactorSparse)
 export(calculateCV)
 export(calculateQC)
 export(clusterAnalysis)
@@ -15,6 +20,7 @@ export(colInfo)
 export(controls)
 export(convert)
 export(convertGeneID)
+export(convertSparse)
 export(excludeControl)
 export(filterByControl)
 export(filterByOutliers)
@@ -79,6 +85,7 @@ importFrom(BiocParallel,bpvec)
 importFrom(MASS,kde2d)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,t)
+importFrom(Rcpp,sourceCpp)
 importFrom(Rtsne,Rtsne)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,merge)
@@ -150,3 +157,4 @@ importFrom(stats,reorder)
 importFrom(stats,setNames)
 importFrom(tidyr,gather)
 importFrom(umap,umap)
+useDynLib(ascend)
