--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export("regcounts<-")
 export("rowInfo<-")
 export(EMSet)
 export(addGeneLabel)
-export(applyRLE)
 export(calcGeoMeansDense)
 export(calcGeoMeansSparse)
 export(calcNormFactorDense)
@@ -44,6 +43,7 @@ export(plotMDS)
 export(plotNormQC)
 export(plotPCA)
 export(plotPCAVariance)
+export(plotSmoothScatter)
 export(plotStability)
 export(plotStabilityDendro)
 export(plotTSNE)
@@ -71,6 +71,7 @@ export(validateEMSet)
 exportClasses(EMSet)
 exportMethods(show)
 exportMethods(updateObject)
+import(RcppArmadillo)
 import(SingleCellExperiment)
 import(SummarizedExperiment)
 import(methods)
